# jz2440

./: .gitignore  2018_0425_kvim_vimrc_vimrc.bundles_jh_diff  README.md
3_leds/: 3_leds.c  head.S  makefile
UsbTool3.1/: UsbToolKeyStore.jks  app-release.apk
UsbTool3.1/app/: build.gradle  proguard-rules.pro
anthony_cdc_vendorSpec_testTool/get_sensordata_and_system_property_20161209/: .get_sensordata_and_system_property.c.swp  Makefile  get_sensordata_and_system_property.c  get_sensordata_and_system_property_linux
aspen_fota/: settings.gradle
aspen_fota/DfuLibrary/: build.gradle
aspen_fota/MIAC_ControllerUtility/: build.gradle
aspen_fota/client/: AndroidManifest.xml  build.gradle  env_setup.sh  platform.jks  proguard-rules.pro
aspen_fota/service/: build.gradle
automake/helloworld/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  hello_world  hello_world.c
bash_例子/: 10_if_2_then  11_elif_then  12_test_eq_ge_gt_ne_le_lt  13_float_test_cmd  14_string_cmp_1  15_string_cmp_2  16_string_cmp_3  17_file_d  18_file_e  19_file_f  1_date_who  20_file_read  21_file_empty  22_file_write  23_file_can_exec  24_file_owner  25_file_date_new_old  26_and_or_calc  27_shuang_yuan_kuohao  28_shuang_kuang_kuohao  29_case_ifelse  2_echo  30_for_do_done  31_for_2_do_done  32_for_3_do_done  33_for_4_do_done  34_for_do_done_if_then  35_for_do_done_c_lang  36_for_do_done_c_2_lang  37_while_do_done  38_while_do_2_done  39_do_until_done  3_environment_variable  40_for_recursive_for  41_for_recursive_2_while  42_until_recursive_while  43_for_parse_file_IFS  44_for_break_1  45_while_break_1  46_for_for_break  (+33 more)
bash_例子/awk_test/: 2_direction_array_test.awk  adjust.awk  awk_test.sh  c2e  course_1.awk  course_jh_2.awk  date1  do_while.awk  for_iterator.awk  late.dat03月  make_report  marks.txt  monkey_eat_peach  mydisply  n_jiecheng  pay1.awk  pay2.awk  refmt.awk  refmt2.awk  refmt3.awk  refmt4.awk  see_arg  today_rpt  today_rpt2  today_rpt3  today_rpt4  week.rpt
bash_例子/sed_test/: 0001-bash.patch  data  sed_cmd.txt  test_cmd_shuang_kuo_hao.sh  tmp_0314.txt
bash_例子/xargs_test/: aaa.txt
cdc_mcu_log_to_pc/: Makefile  cdc_mcu_log_to_pc.c  cdc_mcu_log_to_pc.out
chirp_fota_service/: chirp_fota.jks
chirp_fota_service/app/: build.gradle
cmake/example01/: CMakeLists.txt
cmake/example02/: CMakeLists.txt
cmake/example02/doc/: hello.txt
cmake/example02/src/: CMakeLists.txt  main.c
cmake/example03/: CMakeLists.txt
cmake/example03/lib/: CMakeLists.txt  hello.c  hello.h
cmake/example04/: CMakeLists.txt
cmake/example04/src/: CMakeLists.txt  main.c
cmake/example05/: CMakeLists.txt
cmake/example05/src/: CMakeLists.txt  main.c
cmake/example06/: CMakeLists.txt
cmake/example06/src/: CMakeLists.txt  main.c
first_jz2440_第一期教程_学前班/3_leds/: 3_leds.c  3_leds.lds
first_jz2440_第一期教程_学前班/first_season_hello/: hello.c  makefile
first_jz2440_第一期教程_学前班/interrupter/: head.S  interrupter.c
first_jz2440_第一期教程_学前班/key_led/: makefile
first_jz2440_第一期教程_学前班/lcd_35_43/: framebuffer.c  framebuffer.h  head.S  init.c  interrupt.c  interrupt.h  lcd.lds  lcddrv.c  lcddrv.h  lcdlib.c  lcdlib.h  main.c  makefile  serial.c  serial.h
first_jz2440_第一期教程_学前班/lcd_on_c/: head.S  led_c_on.c
first_jz2440_第一期教程_学前班/mmu/: head.S  led.c  makefile
first_jz2440_第一期教程_学前班/nand/: main.c  nand.c
first_jz2440_第一期教程_学前班/sdram/: head.S
first_jz2440_第一期教程_学前班/uart/: head.S  init.c  main.c  makefile  serial.c  serial.h  uart.lds
first_season_hello/: a.c  hello  makefile
gradle/: build.gradle  build.gradle_0601_1611  settings.gradle
gradle/example02/: build.gradle  version.gralde
gradle/example03/: build.gradle
gradle/example04/: build.gradle  setting.gradle
gradle/example05/: build.gradle
gradle/example06/: build.gradle
idealens/: 0705_1055_idealens_把四元素旋转90度_弧度角度_patch.diff
interrupter/: init.c  main.c  makefile
key_led/: head.S  key_led.c
lcd_on_c/: makefile
led_on_off/: led_on.S  makefile
mmu/: init.c  mmu.lds
nand/: head.S  init.c  main.c  makefile  nand.c  nand.lds
sdram/: leds.c  makefile
(+228 files in other folders)
